# scorbot_ik_trajectories

./: CMakeLists.txt  README.md  package.xml
launch/: display.launch.py
rviz/: scorbot.rviz
scripts/: scorbot_ik_publisher.py  scorbot_trajectory_publisher.py
urdf/: scorbot.urdf
